--- a/src/components/Split/Split.module.css
+++ b/src/components/Split/Split.module.css
@@ -1,10 +1,11 @@
 .container {
     display: flex;
-    height: 100%;
-    width: 100%;
+    overflow: auto;
 }
 
 .leftContainer {
+    display: flex;
+    overflow-y: auto;
     border-right: 1px solid grey;
     width: 300px;
 }
