--- a/src/components/ReviewsTable/ReviewsTable.module.css
+++ b/src/components/ReviewsTable/ReviewsTable.module.css
@@ -1,4 +1,12 @@
 .container {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 8px;
 }
